bugfix-header being cut off on page header

--- a/src/components/helpers/PageHeader/PageHeader.module.scss
+++ b/src/components/helpers/PageHeader/PageHeader.module.scss
@@ -13,6 +13,7 @@
     h3 {
         color:$white;
         margin-right: $sp-base * 2;
+        width:100%;
     }
 }
 
